appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "ReleaseTest: Bookmark open and back navigation"
tags:
    - releaseTest
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
            clearState: true
            stopApp: true

      - runFlow: ../shared/skip_all_onboarding.yaml

      - tapOn:
            id: "omnibarTextInput|inputField"
      - inputText: "https://www.search-company.site/"
      - pressKey: Enter
      - assertVisible:
            text: "Search engine"
      - tapOn:
            id: "omnibarTextInput|inputField"
      - inputText: "https://privacy-test-pages.site"
      - pressKey: Enter
      - assertVisible:
            text: "Privacy Test Pages"
      - tapOn:
          id: 'com.duckduckgo.mobile.android:id/browserMenuImageView'
      - assertVisible:
            text: "add bookmark"
      - tapOn:
            text: "add bookmark"
      - tapOn:
          id: 'com.duckduckgo.mobile.android:id/browserMenuImageView'
      - assertVisible:
            text: "bookmarks"
      - tapOn:
            text: "bookmarks"
      - assertVisible:
            text: "Privacy Test Pages - Home"
      - tapOn:
            text: "Privacy Test Pages - Home"
      - assertVisible:
            text: "Privacy Test Pages"
      - action: back
      - assertVisible:
            text: "Search engine"
