appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "ReleaseTest: Bookmark open in folder and back navigation"
tags:
    - releaseTest
---
- retry:
      maxRetries: 3
      commands:
            - launchApp:
                  clearState: true
                  stopApp: true

            - runFlow: ../shared/skip_all_onboarding.yaml

            - tapOn:
                  id: "omnibarTextInput|inputField"
            - inputText: "https://privacy-test-pages.site/"
            - pressKey: Enter
            - assertVisible:
                  text: "Privacy Test Pages"
            - tapOn:
                id: 'com.duckduckgo.mobile.android:id/browserMenuImageView'
            - assertVisible:
                  text: "add bookmark"
            - tapOn:
                  text: "add bookmark"
            - tapOn:
                  id: "omnibarTextInput|inputField"
            - inputText: "https://www.search-company.site/"
            - pressKey: Enter
            - assertVisible:
                text: "Search engine"
            - tapOn:
                id: 'com.duckduckgo.mobile.android:id/browserMenuImageView'
            - assertVisible:
                  text: "bookmarks"
            - tapOn:
                  text: "bookmarks"
            - assertVisible:
                  text: "Privacy Test Pages - Home"
            - tapOn:
                id: "com.duckduckgo.mobile.android:id/trailingIcon"
            - assertVisible:
                text: "Edit"
            - tapOn:
                text: "edit"
            - assertVisible:
                text: "Location"
            - assertVisible:
                text: "Bookmarks"
            - tapOn:
                text: "bookmarks"
            - assertVisible:
                text: "Select Location"
            - assertVisible:
                text: "Bookmarks"
            - tapOn:
                id: "com.duckduckgo.mobile.android:id/action_add_folder"
            - assertVisible:
                text: "Add Folder"
            - assertVisible:
                text: "Bookmarks"
            - tapOn:
                id: "com.duckduckgo.mobile.android:id/titleInput"
            - inputText: "Folder1"
            - tapOn:
                id: "com.duckduckgo.mobile.android:id/action_confirm_changes"
            - assertVisible:
                text: "Select Location"
            - assertVisible:
                text: "Bookmarks"
            - assertVisible:
                text: "Folder1"
            - tapOn:
                text: "Folder1"
            - assertVisible:
                text: "Edit Bookmark"
            - assertVisible:
                text: "Folder1"
            - tapOn:
                text: "Folder1"
            - tapOn:
                id: "com.duckduckgo.mobile.android:id/action_add_folder"
            - assertVisible:
                text: "Add Folder"
            - assertVisible:
                text: "Bookmarks"
            - inputText: "Folder2"
            - tapOn:
                text: "Bookmarks"
            - assertVisible:
                text: "Select Location"
            - assertVisible:
                text: "Bookmarks"
            - assertVisible:
                text: "Folder1"
            - tapOn:
                text: "Folder1"
            - assertVisible:
                text: "Add Folder"
            - assertVisible:
                text: "Folder2"
            - assertVisible:
                text: "Folder1"
            - tapOn:
                id: "com.duckduckgo.mobile.android:id/action_confirm_changes"
            - assertVisible:
                text: "Select Location"
            - assertVisible:
                text: "Bookmarks"
            - assertVisible:
                text: "Folder1"
            - tapOn:
                text: "Folder1"
            - assertVisible:
                text: "Edit Bookmark"
            - assertVisible:
                text: "Folder1"
            - tapOn:
                text: "Folder1"
            - assertVisible:
                text: "Select Location"
            - assertVisible:
                text: "Folder1"
            - assertVisible:
                text: "Folder2"
            - tapOn:
                text: "Folder2"
            - assertVisible:
                text: "Edit Bookmark"
            - assertVisible:
                text: "Folder2"
            - tapOn:
                id: "com.duckduckgo.mobile.android:id/action_confirm_changes"
            - assertVisible:
                text: "Bookmarks"
            - assertVisible:
                text: "Folder1"
            - assertNotVisible:
                text: "Privacy Test Pages - Home"
            - tapOn:
                text: "Folder1"
            - assertVisible:
                text: "Folder2"
            - tapOn:
                text: "Folder1"
            - assertVisible:
                text: "Folder2"
            - tapOn:
                text: "Folder2"
            - assertVisible:
                text: "Privacy Test Pages - Home"
            - tapOn:
                text: "Privacy Test Pages - Home"
            - assertVisible:
                text: "Privacy Test Pages"
            - action: back
            - assertVisible:
                text: "Search engine"
