appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "ReleaseTest: General website browsing works"
tags:
  - releaseTest
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
          stopApp: true

      - runFlow: ../shared/skip_all_onboarding.yaml

      - assertVisible:
          text: "Search"
      - tapOn:
          id: "omnibarTextInput|inputField"
      - inputText: "https://privacy-test-pages.site"
      - pressKey: Enter
      - assertVisible:
          text: ".*Privacy Test Pages.*"
      - tapOn:
          id: "omnibarTextInput|inputField"
      - eraseText
      - assertVisible:
          text: "Search"
