appId: com.duckduckgo.mobile.android
name: "ReleaseTest: General website browsing works"
tags:
  - releaseTest
env:
  NEWS_SITE: https://cnn.com
---
- launchApp:
    clearState: true
    stopApp: true

- runFlow: ../shared/onboarding.yaml

- tapOn:
    text: "search or type URL"
- inputText: ${NEWS_SITE}
- tapOn:
    id: "com.google.android.inputmethod.latin:id/key_pos_ime_action"
- assertVisible:
    text: ".*keep browsing.*"
- tapOn:
    text: "got it"
