appId: com.duckduckgo.mobile.android
name: "ReleaseTest: General website browsing works"
tags:
  - releaseTest
---
- launchApp:
    clearState: true
    stopApp: true

- runFlow: ../shared/onboarding.yaml
- runScript: sites.js

- tapOn:
    text: "search or type URL"
- inputText: ${output.sites.news}
- tapOn:
    id: "com.google.android.inputmethod.latin:id/key_pos_ime_action"
- assertVisible:
    text: ".*keep browsing.*"
- tapOn:
    text: "got it"
