appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "Custom Tabs navigation"
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
          stopApp: true

      - runFlow:
          file: ../shared/pre_onboarding.yaml
          env:
            SET_AS_DEFAULT: "true"
      - runFlow: ../shared/browser_screen/click_on_menu_button.yaml
      - tapOn:
          text: "settings"
      - scrollUntilVisible:
          element:
            text: "developer settings"
          direction: DOWN
      - tapOn:
          text: "developer settings"
      - scrollUntilVisible:
          element:
            text: "custom tabs"
          direction: DOWN
      - tapOn:
          text: "custom tabs"
      - tapOn:
          text: "add your url here"
      - inputText: "https://www.search-company.site"
      - tapOn:
          text: "load custom tab"
      - assertNotVisible:
          id: "com.duckduckgo.mobile.android:id/fireIconImageView"
      - assertNotVisible:
          id: "com.duckduckgo.mobile.android:id/tabsMenu"
      - assertVisible:
          id: "com.duckduckgo.mobile.android:id/customTabCloseIcon"
      - assertVisible:
          id: "com.duckduckgo.mobile.android:id/customTabShieldIcon"
      - assertVisible:
          id: "com.duckduckgo.mobile.android:id/customTabDomain"
      - tapOn:
          id: "com.duckduckgo.mobile.android:id/browserMenuImageView"
      - assertVisible:
          text: "running in duckduckgo"
      - action: back
      - tapOn:
          text: "[Ad 1] SERP Ad (heuristic)"
      - action: back
      - tapOn:
          text: "[Ad 1] SERP Ad (heuristic)"
      - tapOn:
          id: "com.duckduckgo.mobile.android:id/browserMenuImageView"
      - tapOn:
          id: "com.duckduckgo.mobile.android:id/backMenuItem"
      - assertVisible:
          text: "Search engine"
      - tapOn:
          id: "com.duckduckgo.mobile.android:id/browserMenuImageView"
      - tapOn:
          id: "com.duckduckgo.mobile.android:id/forwardMenuItem"
      - assertVisible:
          text: "Publisher site"
