appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "Custom Tabs navigation in new tab"
tags:
  - customTabsTest
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true
          stopApp: true

      - runFlow:
          file: ../shared/pre_onboarding.yaml
          env:
            SET_AS_DEFAULT: "true"
      - runFlow: ../shared/browser_screen/click_on_menu_button.yaml
      - tapOn:
          text: "settings"
      - scrollUntilVisible:
          element:
            text: "developer settings"
          direction: DOWN
      - tapOn:
          text: "developer settings"
      - scrollUntilVisible:
          element:
            text: "custom tabs"
          direction: DOWN
      - tapOn:
          text: "custom tabs"
      - tapOn:
          text: "add your url here"
      - inputText: "https://www.search-company.site"
      - tapOn:
          text: "load custom tab"
      - tapOn:
          id: "com.duckduckgo.mobile.android:id/browserMenuImageView"
      - assertVisible:
          text: "running in duckduckgo"
      - action: back
      - tapOn:
          text: "[Ad 2] Shopping Tab Ad (heuristic)"
      - assertVisible:
          text: "Publisher site"
      - action: back
      - tapOn:
          text: "[Ad 2] Shopping Tab Ad (heuristic)"
      - tapOn:
          text: "Red shoes"
      - assertVisible:
          text: "Checkout"
      - tapOn:
          id: "com.duckduckgo.mobile.android:id/browserMenuImageView"
      - tapOn:
          id: "com.duckduckgo.mobile.android:id/backMenuItem"
      - assertVisible:
          text: "Red shoes"
      - tapOn:
          id: "com.duckduckgo.mobile.android:id/browserMenuImageView"
      - tapOn:
          id: "com.duckduckgo.mobile.android:id/forwardMenuItem"
      - assertVisible:
          text: "Checkout"
