appId: com.duckduckgo.mobile.android
---
# Open settings and set Duck Player to ask every time
- runFlow: open_duck_player_settings.yaml

- tapOn:
    text: "Ask Every Time"

- tapOn:
    text: "Save"

- pressKey: Back
- launchApp:
      stopApp: true
