appId: com.duckduckgo.mobile.android
---
# Open settings and set Duck Player to never
- runFlow: open_duck_player_settings.yaml

- tapOn:
    text: "Never"

- tapOn:
    text: "Save"

- pressKey: Back
- launchApp:
      stopApp: true
