appId: com.duckduckgo.mobile.android
---
# Select a YouTube video from SERP
- tapOn:
    id: "omnibarTextInput"
- inputText: "https://duckduckgo.com/?q=DuckDuckGo+none+of+our+business+site%3Ayoutube.com&atb=v469-1-wb&ia=web"
- pressKey: Enter

- extendedWaitUntil:
    visible:
      text: "Videos for DuckDuckGo none of our business.*"
    timeout: 15000

- tapOn:
    text: "YouTube"
    index: 0