appId: com.duckduckgo.mobile.android
---
# Select a YouTube video from SERP videos organic
- runFlow: input_search.yaml

- extendedWaitUntil:
    visible:
      text: "Videos"
    timeout: 5000

- scrollUntilVisible:
    element:
      text: "There are tons of.*"
    direction: DOWN

- tapOn:
    text: "There are tons of.*"
