appId: com.duckduckgo.mobile.android
name: "DuckPlayer: Direct > Duck Player"
tags:
  - duckplayer
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true

      - runFlow: ../shared/skip_all_onboarding.yaml
      - runFlow: common/enable_duck_player_ask.yaml

      - runFlow: ../shared/dismiss_native_input.yaml
      - tapOn:
          id: "omnibarTextInput|inputField"
      - inputText: "duck://player/3ml7yeKBUhc"
      - pressKey: Enter

      - runFlow: common/assert_duckplayer_visible.yaml