appId: com.duckduckgo.mobile.android
name: "DuckPlayer: Direct > Duck Player > Playback"
tags:
  - duckplayerlocal
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true

      - runFlow: ../shared/skip_all_onboarding.yaml

      - runFlow: ../shared/dismiss_native_input.yaml
      - tapOn:
          id: "omnibarTextInput|inputField"
      - inputText: "duck://player/3ml7yeKBUhc"
      - pressKey: Enter

      - extendedWaitUntil:
          visible:
            text: "duck://player/3ml7yeKBUhc"
          timeout: 5000

      - tapOn:
          id: player-control-overlay

      - assertVisible: "Pause video"
