appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
name: "DuckPlayer: Direct > Duck Player > YouTube"
tags:
  - duckplayer
---
- retry:
    maxRetries: 3
    commands:
      - launchApp:
          clearState: true

      - runFlow: ../shared/skip_all_onboarding.yaml
      - runFlow: common/enable_duck_player_ask.yaml

      - runFlow: ../shared/dismiss_native_input.yaml
      - tapOn:
          id: "omnibarTextInput|inputField"
      - inputText: "duck://player/3ml7yeKBUhc"
      - pressKey: Enter

      - runFlow: common/assert_duckplayer_visible.yaml

      - runFlow:
          when:
            visible: 
              id: "global-loader"
          commands:
          - tapOn:
              id: app

      - tapOn:
          text: "Watch on YouTube"

      - runFlow: common/assert_youtube_visible.yaml
