appId: com.duckduckgo.mobile.android
name: "DuckPlayer: Open Duck Player Settings"
tags:
  - duckplayer
---
- retry:
    maxRetries: 0
    commands:
      - launchApp:
          clearState: true

      - runFlow: ../shared/skip_all_onboarding.yaml

      - tapOn:
          id: "com.duckduckgo.mobile.android:id/browserMenuImageView"

      - scrollUntilVisible:
          element:
            id: "com.duckduckgo.mobile.android:id/settingsMenuItem"
          direction: DOWN

      - tapOn:
          id: "com.duckduckgo.mobile.android:id/settingsMenuItem"

      - scrollUntilVisible:
          element:
            text: "Duck Player"
          direction: DOWN

      - tapOn:
          text: "Duck Player"

      - assertVisible:
          text: "Open YouTube Videos in Duck Player"